--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -17,9 +17,10 @@
 	color: $white;
 	font-weight: bolder;
 	text-align: center;
-}
-.logo:hover {
-	color: $dark;
+
+	&:hover {
+		color: $dark;
+	}
 }
 
 .navbar {
@@ -40,9 +41,10 @@
 		font-size: 1rem;
 		margin-left: 1rem;
 		color: $white;
-	}
-	a:hover {
-		color: $dark;
+
+		&:hover {
+			color: $dark;
+		}
 	}
 	
 }
@@ -53,11 +55,13 @@
     justify-content: space-between;
 		
 		.logo {
-			margin: 0 auto;
+			margin: 0;
+			position: relative;
+			left: 0;
 		}
 
 		.navbar {
-			margin: auto;
+			margin: 0;
 			flex-grow: .1;
 			
 			ul {
