--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -33,13 +33,14 @@
 		border-radius: 5px;
 		font-size: 5.5rem;
 		color: $dark;
+
+			&:hover {
+				backdrop-filter: none;
+				background: rgba(255, 255, 255, .0);
+				color: transparent;
+			}
 		}
 
-		.blur-filter:hover {
-			backdrop-filter: none;
-			background: rgba(255, 255, 255, .0);
-			color: transparent;
-		}
 	}	
 
 	img {
