--- a/scss/pages/_reviews.scss
+++ b/scss/pages/_reviews.scss
@@ -26,15 +26,16 @@
 			}
 
 			h4 {
-				font-size: 2.5rem;
+				font-size: 2.2rem;
 				padding: .5rem 0;
 				color: #ccc;
 			}
 
 			p {
-				font-size: 1.5rem;
+				font-size: 1.4rem;
 				padding: 1rem 0;
 				color: #ccc;
+				text-transform: none;
 			}
 		}
 	}
